# alola-bot

./: .gitignore  docker-compose.yml  pyproject.toml  requirements.txt  test.py
migrations/versions/: 0ce12bb80de3_.py  230cd09bd25b_.py  8d585b2c67d9_.py  8f8d1407df7c_.py  ce36fdad67cc_.py
src/: configuration.py
src/bot/: dispatcher.py
src/bot/filters/: client_filter.py  web_app_data_filter.py
src/bot/logic/: start.py
src/bot/logic/admin/: broadcast.py  dashboard.py
src/bot/structures/fsm/: admin_states.py  registration.py
src/bot/structures/keyboards/: common.py
src/bot/utils/: billz_api.py  custom_client.py
src/db/: database.py
src/db/models/: __init__.py  message.py  user.py
src/db/repositories/: __init__.py  message.py  user.py
